syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "model/user.proto";
import "model/markdown.proto";

package api.v2;
option go_package = "github.com/smartmemos/memos/internal/proto/api/v2";

service MarkdownService {
     // ParseMarkdown parses the given markdown content and returns a list of nodes.
  // This is a utility method that transforms markdown text into structured nodes.
  rpc ParseMarkdown(ParseMarkdownRequest) returns (ParseMarkdownResponse) {} 
}


message ParseMarkdownRequest {
  // The markdown content to parse.
  string markdown = 1;
}

message ParseMarkdownResponse {
  // The parsed markdown nodes.
  repeated model.Node nodes = 1;
}